--- a/CS_4973_model2.ipynb
+++ b/CS_4973_model2.ipynb
@@ -24,10 +24,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a447eb57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'requests'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
@@ -45,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5e01bc8d",
    "metadata": {},
    "outputs": [],
@@ -64,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "19a24193",
    "metadata": {},
    "outputs": [],
@@ -74,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7e123df7",
    "metadata": {},
    "outputs": [
@@ -446,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d77b46b7",
    "metadata": {},
    "outputs": [
@@ -822,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a077f96f",
    "metadata": {},
    "outputs": [],
@@ -832,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4bd55b55",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "00cfd806",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "000d6268",
    "metadata": {},
    "outputs": [],
@@ -1377,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6663ca7e",
    "metadata": {},
    "outputs": [],
@@ -1387,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7497106a",
    "metadata": {},
    "outputs": [
@@ -1542,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "887cb421",
    "metadata": {},
    "outputs": [
@@ -1611,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "4a098d6e",
    "metadata": {},
    "outputs": [],
@@ -1621,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4d0dd51d",
    "metadata": {
     "scrolled": true
@@ -1826,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "3cfd87c9",
    "metadata": {},
    "outputs": [
@@ -1847,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e9825f9e",
    "metadata": {},
    "outputs": [
@@ -1869,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a7de5813",
    "metadata": {},
    "outputs": [],
@@ -1881,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "72f66a81",
    "metadata": {
     "scrolled": true
@@ -2086,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8d365b47",
    "metadata": {},
    "outputs": [],
@@ -2096,7 +2108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "85f3e268",
    "metadata": {},
    "outputs": [
@@ -2144,7 +2156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
